# jupyter_ai

./: Titanic LGBM Prediction.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  add_extension.sh  pyproject.toml
